--- a/06-maquetacion-grid/estilos.css
+++ b/06-maquetacion-grid/estilos.css
@@ -126,8 +126,6 @@
 /* barra lateral */
 .content__lateral{
     /* Añadir aquí Flex */
-
-
     margin-right: 30px;
     padding: 15px;
 }
@@ -204,4 +202,106 @@
     order: 1;
     opacity: 0.7;
     margin-left: 20px;
+}
+
+/* Responsivo */
+@media (max-width: 1450px){
+    .content__projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 1150px){
+    .content__projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 990px){
+    .content__projects{
+        grid-template-columns: repeat(2, 1fr);
+        margin: 5%;
+        margin-left: 8%;
+    }
+
+    .content{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .content__lateral{
+        margin-right: 0px;
+    }
+
+    .lateral__list{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .lateral__item{
+        margin-left: 5%;
+    }
+}
+
+@media (max-width: 750px){
+    .content__projects{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .lateral__list{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .container__header{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .container__logo{
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-left: 32%;
+    }
+
+    .menu__list{
+        align-items: center;
+        display: grid;
+        margin-left: 10px;
+        height: 0px;
+    }
+
+    .menu__item{
+        align-items: center;
+        text-align: center;
+        margin-left: 5%;
+        height: 0px;
+    }
+
+} 
+
+/* Vista móvil */
+@media (max-width: 580px){
+    .container__logo{
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-left: 27%;
+    }
+
+    .content__footer{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .footer__logoFooter{
+        order: 1;
+        margin-left: 22%;
+        margin-right: 25%;
+    }
+    
+    .footer__info{
+        order: 2;
+        margin-left: 22%;
+    }
+
 }
