--- a/08-maquetacionAgenciaWeb/assets/css/estilos.css
+++ b/08-maquetacionAgenciaWeb/assets/css/estilos.css
@@ -8,7 +8,7 @@
     --color-secondary: #fff;
     --color-banner: #2522BA;
     --color-text-btn: #0d6efd;
-    --colog-bg-btn: #ffdc60;
+    --color-bg-btn: #ffdc60;
     --color-subtitle: #c75c6f;
     --color-title: #292930;
     --color-bg-services: #f8f8f8;
@@ -54,7 +54,8 @@ No es necesario flotar los elementos (ni con float, flex, grid, grid-areas */
 }
 .menu__navbar{
     /* Flex + aling/justify */
-
+    display: grid;
+    grid-template-columns: 1fr 0fr 1fr;
 }
 
 .navbar__logo{
@@ -62,20 +63,36 @@ No es necesario flotar los elementos (ni con float, flex, grid, grid-areas */
 }
 .nav__list{
     /* Flex + aling/justify */
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
 }
+
 .nav__item{
     /* position */
-
+    position: relative; /* relativa es para que se queden los elementos dentro del contenedor del padre */
+    
     margin: 0 2.4rem;
 }
+
 .nav__title{
+    /* Ubicamos el título y el icono */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+
     /* position */
-    
+    position: relative;
+
     line-height: 6rem;
     font-weight: 500;
     color: var(--color-text-body);
     transition: all 300ms ease-in-out;
 }
+
+.nav__title i{
+    margin-left: 5px;
+}
+
 .nav__icon{
     font-size: 1rem;
     font-weight: bold;
@@ -85,50 +102,124 @@ No es necesario flotar los elementos (ni con float, flex, grid, grid-areas */
 
 /* efecto */
 .nav__title:hover{
-
+    color: var(--color-primary);
+    transform: scale(1.03);
 }
 
+/* Pseudoelemente para subrayado en el menu */
+.nav__title::before{
+    content: "";
+    position: absolute;
+    height: 0.2rem;
+    background-color: var(--color-primary);
+    bottom: 1.2rem;
+    left: 0;
+    width: 0%;
+    opacity: 0;
+    transition: all 450ms linear;
+}
+
+.nav__title:hover::before{
+    width: 100%;
+    opacity: 1;
+}
 
 .nav__submenu{
     /* position */
-    
-    
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 2rem; /* Separo a la derecha para despues en la transición moverlo */
+
     min-width: 19rem;
     padding: 1.5rem 1rem;
     background-color: var(--color-secondary);
     box-shadow: 0px 13px 48px 0 rgba(0,0,0,15%);
     
     /* visibility, opacity y efecto */
-
+    opacity: 0;
+    /* visibility: hidden; */
+    transition: all 450ms ease-in-out;
 }
 
 .submenu__item{
-    /* efecto */ 
+    /* efecto */
+    opacity: 0;
+    transform: translateX(3rem);
+    transition: all 500ms ease-in-out;
 }
 
 /* efecto */
-
+.submenu__item:nth-child(1){ /* nth-child se usa para atacar al elemento de la posición que le indiquemos */
+    transition-delay: 100ms;
+}
+.submenu__item:nth-child(2){
+    transition-delay: 200ms;
+}
+.submenu__item:nth-child(3){
+    transition-delay: 300ms;
+}
+.submenu__item:nth-child(4){
+    transition-delay: 400ms;
+}
 
 .submenu__title{
     /* position */ 
+    position: relative;
+
     font-size: 1.4rem;
     text-transform: capitalize;
     text-decoration: none;
     font-weight: 500;
     color: var(--color-text-body);
     padding: 0.7rem 1.5rem;
-    /* efecto */
 
+    /* efecto */
+    transition: all 450ms linear;
 }
 
 /* efectos varios */
 
+/* Todo lo que cambie lo transiciona por el efecto de transition */
+.nav__item:hover>.nav__submenu{
+    opacity: 1;
+    /* visibility: visible; */
+    z-index: 10;
+    left: 0;
+}
 
+.nav__item:hover>.nav__submenu>.submenu__item{
+    opacity: 1;
+    transform: translateX(0);
+}
 
+.submenu__title:hover{
+    color: var(--color-primary);
+    transform: scale(1.03);
+}
+
+.submenu__item::before{
+    content: "";
+    position: absolute;
+    height: 0.2rem;
+    background-color: var(--color-primary);
+    bottom: 0;
+    left: 1.2rem;
+    width: 20%;
+    opacity: 0;
+    transition: all 450ms linear;
+}
+
+.submenu__item:hover::before{
+    width: 70%;
+    opacity: 1;
+
+}
 
 /* Estilos para el Banner */
 .layout__banner{
     /* position */
+    position: relative;
 
     min-height: 60rem;
     /*border: 2px solid red; */
@@ -144,7 +235,8 @@ No es necesario flotar los elementos (ni con float, flex, grid, grid-areas */
 }
 .banner__content{
     /* position */
-
+    position: relative;
+    display: inline-block; /* Para que se muevan en bloque */
 
     width: 50%;
     padding: 0 1.5rem;
@@ -166,10 +258,15 @@ No es necesario flotar los elementos (ni con float, flex, grid, grid-areas */
     text-transform: capitalize;
     text-align: center;
     box-shadow: 0px 45px 70px -25px var(--color-primary);
+    
     /* efecto */
+    transition: all 350ms ease-in-out;
 }
-/* efecto */
 
+/* efecto */
+.banner__btn:hover{
+    background-color: var(--color-bg-btn);
+}
 
 .shapes__item{
     /* position y z-index */
