--- a/Practica_1/css/estilos.css
+++ b/Practica_1/css/estilos.css
@@ -51,7 +51,7 @@ html{
     overflow-x: hidden;
 }
 body{
-    background: url("../img/prueba2.png");
+    background: url("../img/pattern.png");
 }
 /* wrap queremos que los elementos "hijos" dispongan de estos estilos */
 .header__wrap, .content__wrap, .footer__wrap{
@@ -73,9 +73,10 @@ body{
 .header{
     width: 100%;
     height: 70px;
-    background-color: var(--color-nav);
+    background-color: #6d4747;
     font-family: "BebasNeue";
     color: var(--color-text-white);
+    box-shadow: 3px 3px 10px var(--color-box-shadow2);
 }
 
 .header__logo{
