--- a/Practica_1/css/responsive.css
+++ b/Practica_1/css/responsive.css
@@ -3,26 +3,90 @@
     .header__wrap, .content__wrap, .footer__wrap {
         width: 96%;
     }
+
     .main__container {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .content__lateral{
+        width: 96%;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+    }
+
+    .articles__box{
+        width: 96%;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+        justify-content: space-between;
+    }
+
+    .articles__title{
+        margin-left: 10px;
+        width: 1080px;
+    }
 }
 
-@media (max-width: 1079px) {
-    /* Cambiar el tamaño de las fuentes y márgenes */
+@media (max-width: 1150px) {
+    .articles__title{
+        margin-left: 10px;
+        width: 120%
+    }
+
+    .articles__box{
+        width: 120%;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        margin-left: 20px;
+    }
+}
+
+@media (max-width: 1095px) {
     .list__item {
-        font-size: 20px;
-        padding-top: 20px;
+        font-size: 25px;
+        margin-left: 10px;
     }
+
+    .content__cards{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
     .cards__card {
-        width: 180px;
+        width: 200px;
+    }
+
+
+    .articles__title{
+        margin-left: 10px;
+        width: 110%
+    }
+
+    .articles__box{
+        width: 110%;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        margin-left: 20px;
+    }
+
+    .content__lateral{
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media (max-width: 969px) {
+@media (max-width: 1010px) {
     /* Cambiar a dos columnas en .content__cards */
-    .content__cards {
-        grid-template-columns: repeat(2, 1fr);
+    .articles__title{
+        width: 100%
+    }
+
+    .articles__box{
+        width: 100%;
+    }
+
+    .content__lateral{
+        width: 90%;
+        height: 50%;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -31,75 +95,92 @@
     .header__menu {
         height: 60px;
     }
+
     .list__item {
-        font-size: 18px;
+        font-size: 25px;
+        margin-left: 15px;
+    }
+
+    .articles__title{
+        margin-left: 10px;
+        width: 90%
+    }
+
+    .articles__box{
+        width: 90%;
+        gap: 0px;
+        margin-left: 20px;
+        margin-right: 10px;
     }
 }
 
 @media (max-width: 890px) {
     /* Ajustar tamaño de banner y tarjetas */
-    .content__banner {
-        height: 80px;
-    }
-    .cards__card {
-        width: 160px;
-    }
-}
-
-@media (max-width: 800px) {
-    /* Convertir el menú a vertical y ajustar encabezado */
-    .menu__list {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
-    .content__cards {
-        grid-template-columns: 1fr;
-        margin-left: 0;
-    }
-    .header__wrap {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media (max-width: 799px) {
-    /* Más ajustes de ancho */
-    .header__logo {
-        width: 12%;
-    }
     .content__banner h1 {
-        font-size: 36px;
+        width: 650px;
+    }
+    .content__cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 830px) {
+    /* Convertir el menú a vertical y ajustar encabezado */
+    .articles__title{
+        width: 80%
+    }
+
+    .articles__box{
+        width: 80%;
+        margin-left: 20px;
+        margin-right: 10px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .content__lateral{
+        width: 75%;
+        height: 50%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .footer__title {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 745px) {
+    /* Convertir el menú a vertical y ajustar encabezado */
+    .articles__title{
+        width: 70%
+    }
+
+    .articles__box{
+        width: 70%;
+    }
+
+    .content__lateral{
+        width: 65%;
+        height: 50%;
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
 @media (max-width: 660px) {
     /* Ajustes para móviles */
-    .list__item {
-        font-size: 16px;
+    .content__banner h1 {
+        margin: 10px auto;
+        width: 300px;
     }
-    .header__menu {
-        height: 50px;
-    }
-    .content__articles {
-        width: 100%;
-    }
-}
 
-@media (max-width: 550px) {
-    /* Cambiar layout de aside y footer */
-    .main__container {
-        grid-template-columns: 1fr;
+    .articles__title{
+        width: 65%
     }
-    .footer__wrap {
-        grid-template-columns: 1fr;
-    }
-}
 
-@media (max-width: 470px) {
-    /* Ajustar texto y estructura para móvil */
+    .articles__box{
+        width: 65%;
+    }
+
     .footer__title {
-        font-size: 24px;
-    }
-    .articles__article h4 {
-        font-size: 18px;
+        font-size: 20px;
     }
 }
