--- a/09-saas/CSS/estilos.css
+++ b/09-saas/CSS/estilos.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+/* Variables */
 body {
   background-color: #1d1d1d;
   color: #f1f1f1;
@@ -10,6 +12,7 @@ h1 {
   height: 100px;
 }
 
+/* Anidación */
 .caja {
   border: 1px solid #a1a1a1;
   margin: 0px auto;
@@ -19,6 +22,110 @@ h1 {
   padding: 10px;
 }
 .caja h2 {
-  color: rgb(188, 89, 212);
+  color: violet;
   font-size: 27px;
+}
+
+/* Mixins - Funciones */
+.caja {
+  border: 5px solid grey;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px pink;
+}
+
+.caja2 {
+  border: 10px solid palevioletred;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px violet;
+  text-align: center;
+  color: #f1f1f1;
+  padding: 10px;
+}
+.caja2 h2 {
+  color: violet;
+  font-size: 27px;
+}
+
+/* Herencia Sass */
+.alerta--exito, .alerta--peligro, .alerta {
+  border: 5px solid yellow;
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px grey;
+  padding: 10px;
+  width: 75%;
+  margin: 20px auto;
+  text-align: center;
+  font-size: 18px;
+}
+
+.alerta--peligro {
+  border: 5px solid red;
+}
+
+.alerta--exito {
+  border: 5px solid greenyellow;
+}
+
+/* Operadores */
+h4 {
+  font-size: 36px;
+}
+
+.cajas {
+  width: 900px;
+  border: 1px solid whitesmoke;
+  text-align: center;
+  border-radius: 50px;
+  margin: 10px auto;
+}
+
+.cajaOp {
+  float: left;
+  border: 5px solid grey;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px pink;
+  margin: 10px;
+  width: 22.2222222222%;
+}
+
+/* Condicionales Sass - if */
+h1 {
+  color: orangered;
+}
+
+/* Bucles For - Each - While */
+.listadoMixin ul li:nth-child(1) {
+  font-size: 5px;
+}
+
+.listadoMixin ul li:nth-child(2) {
+  font-size: 10px;
+}
+
+.listadoMixin ul li:nth-child(3) {
+  font-size: 15px;
+}
+
+.listadoMixin ul li:nth-child(4) {
+  font-size: 20px;
+}
+
+.listadoMixin ul li:nth-child(5) {
+  font-size: 25px;
+}
+
+.listadoMixin ul li:nth-child(6) {
+  font-size: 30px;
+}
+
+.listadoMixin ul li:nth-child(7) {
+  font-size: 35px;
+}
+
+.listadoMixin ul li:nth-child(8) {
+  font-size: 40px;
+}
+
+.listadoMixin ul li:nth-child(9) {
+  font-size: 45px;
 }/*# sourceMappingURL=estilos.css.map */
