--- a/12-react/src/App.css
+++ b/12-react/src/App.css
@@ -1,4 +1,4 @@
-div {
+.contador {
   font-size: 2em;
   border: solid 2px pink;
   width: 100px;
@@ -6,4 +6,3 @@ div {
   margin: 10px;
   text-align: center;
 }
-
