--- a/12-react/01-juego/src/juego.css
+++ b/12-react/01-juego/src/juego.css
@@ -13,7 +13,7 @@ html{
 
 body {
   font-family: 'Press Start 2P', sans-serif;
-  background-color: #222;
+  background-color: #5e5e5e;
   color: #eee;
   display: flex;
   justify-content: center;
